--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 celery_version: "3.1.18"
+celery_user: "celery"
+celery_user_group: "celery"
 celery_dir: "/var/lib/celery"
 celery_bin: "/usr/local/bin/celery"
 celery_start_on: "local-filesystems and net-device-up IFACE!=lo"
