changed some default variables values to reflect the current version of celery; added required vars for systemd service configuration;

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-celery_version: "3.1.18"
+celery_version: "4.2.0"
 celery_user: "celery"
 celery_user_group: "celery"
 celery_dir: "/var/lib/celery"
@@ -7,8 +7,11 @@ celery_bin: "/usr/local/bin/celery"
 celery_start_on: "local-filesystems and net-device-up IFACE!=lo"
 celery_app: "proj"
 celery_broker_url: "redis://localhost:6379/0"
-celery_log_level: "info"
 celery_autoreload: False
+celery_nodes:
+  - localhost
+celeryd_options: ""
+celery_log_level: "error"
 
 celery_log: "/var/log/celery.log"
 celery_log_rotate_count: 5
