added tasks for systemd service creation and configuration. Systemd will be used only if the current linux version uses it by default.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
+- name: Restart Celery (systemd)
+  service: name=celery.service state=restarted daemon_reload=yes enabled=yes
+
 - name: Restart Celery
-  service: name=celery state=restarted
+  service: name=celery state=restarted enabled=yes
