--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,10 +15,32 @@
 - name: Install Celery
   pip: name="celery[redis]" version="{{ celery_version }}" state=present
 
+- name: Configure Celery systemd service configuration
+  template: src=celery_systemd.conf.j2 dest=/etc/conf.d/celery
+  when: >
+    (ansible_distribution == 'Ubuntu' and ansible_distribution_version|int >= 16) or
+    (ansible_distribution == 'Debian' and ansible_distribution_version|int >= 8) or
+    (ansible_distribution == 'CentOS' and ansible_distribution_version|int >= 7) or
+    (ansible_distribution == 'Fedora')
+
+- name: Configure Celery systemd service definition
+  template: src=celery_systemd.service.j2 dest=/etc/systemd/system/celery.service
+  notify:
+    - Restart Celery (systemd)
+  when: >
+    (ansible_distribution == 'Ubuntu' and ansible_distribution_version|int >= 16) or
+    (ansible_distribution == 'Debian' and ansible_distribution_version|int >= 8) or
+    (ansible_distribution == 'CentOS' and ansible_distribution_version|int >= 7) or
+    (ansible_distribution == 'Fedora')
+
 - name: Configure Celery service definition
-  template: src=celery.conf.j2 dest=/etc/init/celery.conf
+  template: src=celery_init.conf.j2 dest=/etc/init/celery.conf
   notify:
     - Restart Celery
+  when: >
+    (ansible_distribution == 'Ubuntu' and ansible_distribution_version|int < 16) or
+    (ansible_distribution == 'Debian' and ansible_distribution_version|int < 8) or
+    (ansible_distribution == 'CentOS' and ansible_distribution_version|int < 7)
 
 - name: Touch log file if it does not exist
   copy: content="" dest="{{ celery_log }}" force=no
