--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,7 +16,7 @@
   pip: name="celery[redis]" version="{{ celery_version }}" state=present
 
 - name: Configure Celery systemd service configuration
-  template: src=celery_systemd.conf.j2 dest=/etc/conf.d/celery
+  template: src=celery_systemd.conf.j2 dest=/lib/systemd/system/celery.service.d/celery-systemd.conf
   when: >
     (ansible_distribution == 'Ubuntu' and ansible_distribution_version|int >= 16) or
     (ansible_distribution == 'Debian' and ansible_distribution_version|int >= 8) or
@@ -24,7 +24,7 @@
     (ansible_distribution == 'Fedora')
 
 - name: Configure Celery systemd service definition
-  template: src=celery_systemd.service.j2 dest=/etc/systemd/system/celery.service
+  template: src=celery_systemd.service.j2 dest=/lib/systemd/system/celery.service
   notify:
     - Restart Celery (systemd)
   when: >
