--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,10 @@ celery_version: "4.2.0"
 celery_user: "celery"
 celery_user_group: "celery"
 celery_dir: "/var/lib/celery"
+celery_systemd_dir: "/lib/systemd/system"
+celery_systemd_service_file: "{{ celery_systemd_dir }}/celery.service"
+celery_systemd_conf_dir: "{{ celery_systemd_dir }}/celery.service.d"
+celery_systemd_conf_file: "{{ celery_systemd_conf_dir }}/celery-systemd.conf"
 celery_bin: "/usr/local/bin/celery"
 celery_start_on: "local-filesystems and net-device-up IFACE!=lo"
 celery_app: "proj"
