--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,8 +15,11 @@
 - name: Install Celery
   pip: name="celery[redis]" version="{{ celery_version }}" state=present
 
+- name: "Ensures {{ celery_systemd_conf_dir }} dir exists"
+  file: path="{{ celery_systemd_conf_dir }}" owner=root group=root state=directory
+
 - name: Configure Celery systemd service configuration
-  template: src=celery_systemd.conf.j2 dest=/lib/systemd/system/celery.service.d/celery-systemd.conf
+  template: src=celery_systemd.conf.j2 dest="{{ celery_systemd_conf_file }}"
   when: >
     (ansible_distribution == 'Ubuntu' and ansible_distribution_version|int >= 16) or
     (ansible_distribution == 'Debian' and ansible_distribution_version|int >= 8) or
@@ -24,7 +27,7 @@
     (ansible_distribution == 'Fedora')
 
 - name: Configure Celery systemd service definition
-  template: src=celery_systemd.service.j2 dest=/lib/systemd/system/celery.service
+  template: src=celery_systemd.service.j2 dest="{{ celery_systemd_service_file }}"
   notify:
     - Restart Celery (systemd)
   when: >
