added var `celery_working_dir`; added task to ensure that `celery_working_dir` exists; added `celery_working_dir` to the `celery_systemd.service` template.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@ celery_version: "4.2.0"
 celery_user: "celery"
 celery_user_group: "celery"
 celery_dir: "/var/lib/celery"
+celery_working_dir: "/opt/celery"
 celery_systemd_dir: "/lib/systemd/system"
 celery_systemd_service_file: "{{ celery_systemd_dir }}/celery.service"
 celery_systemd_conf_dir: "{{ celery_systemd_dir }}/celery.service.d"
